# llama2-burn

./: .gitignore  Cargo.toml  README.md  debug.md  notes.md
src/: config.rs  lib.rs  llama2.rs  main.rs  sampling.rs  state.rs  tokenizer.rs  utils.rs
